2001-09-23  Bruno Haible  <haible@clisp.cons.org>

	* siginfo.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Test for msgmerge which understands the
	--update option.

2001-10-20  Bruno Haible  <haible@clisp.cons.org>

	Assume strchr() exists.
	* gettext.m4 (AM_GNU_GETTEXT): Remove check for strchr.

2001-09-17  Bruno Haible  <haible@clisp.cons.org>

	* backupfile.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-25  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.m4: Recognize javac exit code 2.

2001-09-24  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Capture not only the value of $LINGUAS,
	but also whether it was set or unset.
	Reported by Andreas Schwab <schwab@suse.de>.

2001-08-12  Jim Meyering  <meyering@lucent.com>

	* mbrtowc.m4: Quote first arg of AC_DEFUN.
	* mbstate_t.m4: Likewise.
	* mbswidth.m4: Likewise.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* signalblocking.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.m4: New file.
	* javaexec.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* setenv.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* mkdtemp.m4: New file.
	* tmpdir.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2001-09-03  Bruno Haible  <haible@clisp.cons.org>

	* flex.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Remove computation of CATALOGS.
	(AM_WITH_NLS): Compute ALL_LINGUAS, GMOFILES, POFILES, CATALOGS while
	creating po/Makefile from po/Makefile.in. Remove computation of
	GMOFILES, POFILES during configure.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Simplify the logic. Use the same tests