@@ -64,28 +64,8 @@ strtoul tsearch __argz_count __argz_stringify __argz_next])
    AM_ICONV
    AM_LANGINFO_CODESET
    AM_LC_MESSAGES
-   AM_WITH_NLS([$1],[$2],[$3])
 
-   dnl If the AC_CONFIG_AUX_DIR macro for autoconf is used we possibly
-   dnl find the mkinstalldirs script in another subdir but $(top_srcdir).
-   dnl Try to locate is.
-   MKINSTALLDIRS=
-   if test -n "$ac_aux_dir"; then
-     MKINSTALLDIRS="$ac_aux_dir/mkinstalldirs"
-   fi
-   if test -z "$MKINSTALLDIRS"; then
-     MKINSTALLDIRS="\$(top_srcdir)/mkinstalldirs"
-   fi
-   AC_SUBST(MKINSTALLDIRS)
-
-   dnl Enable libtool support if the surrounding package wishes it.
-   INTL_LIBTOOL_SUFFIX_PREFIX=ifelse([$1], use-libtool, [l], [])
-   AC_SUBST(INTL_LIBTOOL_SUFFIX_PREFIX)
-  ])
-
-dnl Usage: Just like AM_GNU_GETTEXT, which see.
-AC_DEFUN([AM_WITH_NLS],
-  [AC_MSG_CHECKING([whether NLS is requested])
+    AC_MSG_CHECKING([whether NLS is requested])
     dnl Default is enabled NLS
     AC_ARG_ENABLE(nls,
       [  --disable-nls           do not use Native Language Support],
@@ -385,4 +365,20 @@ changequote([,])dnl
     dnl For backward compatibility. Some Makefiles may be using this.
     GENCAT=gencat
     AC_SUBST(GENCAT)
+
+    dnl If the AC_CONFIG_AUX_DIR macro for autoconf is used we possibly
+    dnl find the mkinstalldirs script in another subdir but $(top_srcdir).
+    dnl Try to locate is.
+    MKINSTALLDIRS=
+    if test -n "$ac_aux_dir"; then
+      MKINSTALLDIRS="$ac_aux_dir/mkinstalldirs"
+    fi
+    if test -z "$MKINSTALLDIRS"; then
+      MKINSTALLDIRS="\$(top_srcdir)/mkinstalldirs"
+    fi
+    AC_SUBST(MKINSTALLDIRS)
+
+    dnl Enable libtool support if the surrounding package wishes it.
+    INTL_LIBTOOL_SUFFIX_PREFIX=ifelse([$1], use-libtool, [l], [])
+    AC_SUBST(INTL_LIBTOOL_SUFFIX_PREFIX)
   ])
